k8s-rewrite/charts/media-stack/sonarr/ingress.yaml
# Sonarr Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: plex
spec:
  rules:
  - host: sonarr.branconet.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 8989
